# SR-AssetValidator

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_sample.bat  run_sample.sh  setup.bat  setup.sh
sr_asset_validator/: __init__.py  cli.py  report.py
sr_asset_validator/core/: __init__.py  engine.py  registry.py  result.py  rule.py  spec.py  stage_loader.py
sr_asset_validator/rules/: __init__.py
sr_asset_validator/rules/basic/: default_prim.py  extents_checker.py  kind_checker.py  layer_spec.py  stage_metadata.py  type_checker.py
sr_asset_validator/rules/geometry/: manifold.py  normals.py  primvar.py  subdivision.py  topology.py  zero_area.py
sr_asset_validator/rules/layout/: orphaned_prim.py  prim_encapsulation.py
sr_asset_validator/rules/material/: binding.py  dangling_ref.py  path_checker.py  preview_surface.py
sr_asset_validator/rules/physics/: collider.py  mass.py  physical_material.py  rigid_body.py
sr_asset_validator/rules/simready/: asset_structure.py  meter_scale.py  semantic_labels.py
sr_asset_validator/specs/: simready_foundations.py
tests/: conftest.py  test_engine.py  test_foundation_samples.py
tests/test_rules/: test_basic.py  test_geometry.py  test_layout.py  test_material.py  test_physics.py  test_simready.py
