[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sr-asset-validator"
version = "0.1.0"
description = "Lightweight SimReady USD asset validator — no Kit required"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
sr-validate = "sr_asset_validator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
